# easyrepr

./: .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  pyproject.toml
.circleci/: config.yml
autorepr/: __init__.py  autorepr.py  decorator.py  descriptor.py  style.py
docs/: api.rst  conf.py  guide.rst  index.rst  license.rst
easyrepr/: __init__.py  decorator.py  descriptor.py  reflection.py  style.py
tests/: test_autorepr.py  test_basic.py  test_descriptor.py  test_inheritance.py  test_reflection.py  test_slots.py  test_style.py
