[tool.poetry]
name = "autorepr"
version = "0.1.0"
description = ""
authors = ["Chris Bouchard <chris@upliftinglemma.net>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
mypy = "^0.910"
flake8 = "^3.9.2"
Sphinx = "^4.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
