[tool.poetry]
name = "easyrepr"
version = "0.1.0"
description = "Python decorator to automatically generate repr strings"
authors = ["Chris Bouchard <chris@upliftinglemma.net>"]
license = "MIT"
homepage = "https://github.com/chrisbouchard/autorepr"
repository = "https://github.com/chrisbouchard/autorepr"
documentation = "https://autorepr.readthedocs.io/"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.8b0"
mypy = "^0.910"
flake8 = "^3.9.2"
Sphinx = "^4.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
